sliding page overflow fix

--- a/personal-website/styles/main.css
+++ b/personal-website/styles/main.css
@@ -1,20 +1,22 @@
 html, body{
     margin: 0;
     padding: 0;
-    width: 100%;
+    max-width: 100%;
     font-family: 'Montserrat', sans-serif;
     background: #161623;
+    position: relative;
     overflow-x: hidden;
 }
+
 body::before{
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 50%;
     background: linear-gradient(#00ff15, #0077ff);
-    clip-path: circle(30% at right 70%);
+    clip-path: circle(26% at right 50%);
 }
 body::after{
     content: '';
@@ -22,11 +24,21 @@ body::after{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 50%;
     background: linear-gradient(#00ff6a, #0014ff);
-    clip-path: circle(20% at 10% 10%);
+    clip-path: circle(18% at 10% 5%);
 }
-
+.third-circle{
+    margin-top: 90vh;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 40%;
+    background: linear-gradient(#00c3ff, #ff00dd);
+    clip-path: circle(40% at 20% 40%);
+}
 .navbar{
     top: 0;
     width: 100%;
@@ -123,14 +135,14 @@ body::after{
     font-size: 2em;
     margin: 0;
     margin-left: 46vw;
-    margin-top: 24.5vh;
+    margin-top: 24vh;
     position: absolute;
 }
 #logo h2{
     font-size: 5em;
     margin: 0;
     position: absolute;
-    margin-top: 26vh;
+    margin-top: 25vh;
 }
 .smart-txt{
     margin-top: 40vh;
@@ -163,7 +175,6 @@ body::after{
     cursor: pointer;
 }
 .work{
-    overflow: hidden;
     position: absolute;
     top: 0;
     right: 0;
@@ -176,7 +187,6 @@ body::after{
     -webkit-transition: all 0.7s ease;
     -o-transition: all 0.7s ease;
     transition: all 0.7s ease;
-
 }
 .work-page{
     position: absolute;
@@ -203,6 +213,8 @@ body::after{
         -ms-transform: translateX(0%);
             transform: translateX(0%);
     position: fixed;
+    
+
 }
 #close-btn{
     height: 8vh;
@@ -259,17 +271,7 @@ body::after{
     background-color: rgb(172, 172, 172);
 }
 
-.third-circle{
-    margin-top: 100vh;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 110%;
-    background: linear-gradient(#00c3ff, #ff00dd);
-    clip-path: circle(45% at 10% 40%);
-}
+
 .container{ 
     box-shadow: 20px 20px 50px rgba(0, 0, 0, .5);
     background: rgba(255, 255, 255, 0.1);
